# alpha_interactions

./: README.md  main.py  pyproject.toml  xyz.txt
alphafold_interactions/: pyproject.toml
assets/data_storage/fold_aldoa_zer1_shuffle/: fold_aldoa_zer1_shuffle_job_request.json  fold_aldoa_zer1_shuffle_model_0.cif  fold_aldoa_zer1_shuffle_model_1.cif  fold_aldoa_zer1_shuffle_model_2.cif  fold_aldoa_zer1_shuffle_model_3.cif  fold_aldoa_zer1_shuffle_model_4.cif  fold_aldoa_zer1_shuffle_summary_confidences_0.json  fold_aldoa_zer1_shuffle_summary_confidences_1.json  fold_aldoa_zer1_shuffle_summary_confidences_2.json  fold_aldoa_zer1_shuffle_summary_confidences_3.json  fold_aldoa_zer1_shuffle_summary_confidences_4.json
assets/data_storage/fold_femb1_tom20_pld6/: fold_femb1_tom20_pld6_job_request.json
assets/data_storage/fold_femn1b_cdcc98/: fold_femn1b_cdcc98_job_request.json  fold_femn1b_cdcc98_model_0.cif  fold_femn1b_cdcc98_model_1.cif  fold_femn1b_cdcc98_model_2.cif  fold_femn1b_cdcc98_model_3.cif  fold_femn1b_cdcc98_model_4.cif  (+5 more)
data_analysis/best_model/: model_number.py  output_best_model.py
data_analysis/interactions_analysis/: output_script_for_chimerax.py  plot_interactions.py  print_interactions_results.py
data_analysis/shuffle_seq/: shep.py
draws/: app.py  check_method.py  header.py  input_receiver.py  output_protein_data.py  tabs.py
json_analysis/best_model/: model_number.py  output_best_model.py
json_analysis/interactions_analysis/: find_intreactions.py  plot_interactions.py  print_interactions_results.py
(+53 files in other folders)
