[tool.poetry]
name = "alphafold-interactions"
version = "0.1.0"
description = ""
authors = ["shaharTasa <136985326+shaharTasa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
