[tool.poetry]
name = "alphafold-interactions"
version = "0.1.0"
description = ""
authors = ["shaharTasa <136985326+shaharTasa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
streamlit = "^1.35.0"


streamlit-extras = "^0.4.3"
pathlib = "^1.0.1"
plotly = "^5.22.0"
py3dmol = "^2.1.0"
streamlit-molstar = "^0.4.21"
stmol = "0.0.9"
ipython-genutils = "^0.2.0"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
preinstall = "bash -c 'export LD_LIBRARY_PATH=$HOME/local/lib:$LD_LIBRARY_PATH && export PKG_CONFIG_PATH=$HOME/local/lib/pkgconfig:$PKG_CONFIG_PATH && export PATH=$HOME/local/bin:$PATH'"
